--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -5,6 +5,7 @@
   position: relative;
   padding: 2em 1em 2em 1em;
   background-color: #0099ff;
+  overflow: hidden;
 }
 
 .copyright {
