--- a/src/sass/partials/_owlcarousel.scss
+++ b/src/sass/partials/_owlcarousel.scss
@@ -9,6 +9,7 @@
   padding: 1em;
   color: #000;
   background: transparent;
+  overflow: hidden;
 
   @media (min-width: 800px) {
     padding: 5em;
